--- a/app/src/main/res/layout/fragment_carros.xml
+++ b/app/src/main/res/layout/fragment_carros.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
 
-    <Spinner
+    <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
