Se termino de modicar el registro de usuarios  y creacion de vehiculos con asignacion
Tambien se logro bindear y crear las vistas de monitoreo en tiempo real

--- a/app/src/main/res/layout/fragment_carros.xml
+++ b/app/src/main/res/layout/fragment_carros.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
 
-    <androidx.appcompat.widget.AppCompatSpinner
+    <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
