--- a/app/src/main/res/layout/fragment_monitoreo_personal.xml
+++ b/app/src/main/res/layout/fragment_monitoreo_personal.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.consorciosm.sanmiguel.ui.main.admin.ui.monitoreo.MonitoreoPersonal">
 
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
@@ -31,12 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="1dp"
-        app:layout_constraintEnd_toEndOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-        app:layout_constraintTop_toTopOf="@+id/guideline4">
+        app:layout_constraintEnd_toEndOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,14 +61,10 @@
     </androidx.cardview.widget.CardView>
 
     <!-- Mapa -->
-    <FrameLayout
+    <fragment
+        android:id="@+id/mapa"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        android:layout_height="match_parent"/>
 
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
