--- a/app/src/main/res/navigation/nav_supervisor.xml
+++ b/app/src/main/res/navigation/nav_supervisor.xml
@@ -8,41 +8,43 @@
     <fragment
         android:id="@+id/registro_carro"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.registro_personal.RegistroPersonalFragment"
-        android:label="@string/menu_home"
+        android:label="Registra chofer"
         tools:layout="@layout/fragment_registro_personal">
         <argument
             android:name="new"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
         <argument
             android:name="id"
-            app:argType="string"
-            android:defaultValue="sad" />
+            android:defaultValue="sad"
+            app:argType="string" />
     </fragment>
 
     <fragment
         android:id="@+id/registro_vehiculo"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.registro_carros.RegistroCarrosFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_registro_carros" >
+        android:label="Registra un Vehiculo"
+        tools:layout="@layout/fragment_registro_carros">
         <argument
             android:name="new"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
         <argument
             android:name="id"
-            app:argType="string"
-            android:defaultValue="sad" />
+            android:defaultValue="sad"
+            app:argType="string" />
     </fragment>
 
     <fragment
         android:id="@+id/nav_partes"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.partes.PartesFragment"
+        android:label="Partes diarias"
         tools:layout="@layout/fragment_partes" />
     <fragment
         android:id="@+id/nav_personal"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.monitoreo.MonitoreoPersonal"
-        tools:layout="@layout/fragment_monitoreo_personal" >
+        android:label="Monitorea tu personal"
+        tools:layout="@layout/fragment_monitoreo_personal">
         <action
             android:id="@+id/action_nav_personal_to_monitoreoPreview"
             app:destination="@id/monitoreoPreview" />
@@ -50,12 +52,12 @@
     <fragment
         android:id="@+id/nav_permisos"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.ordenes.OrdernesProgramadas"
-        android:label="fragment_ordernes_programadas"
+        android:label="Crear  Ruta Programada"
         tools:layout="@layout/fragment_ordernes_programadas" />
     <fragment
         android:id="@+id/nav_perfil"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.perfil.ProfileFragment"
-        android:label="fragment_profile"
+        android:label="Cerrar Sesion"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/nav_validacion"
@@ -74,7 +76,7 @@
     <fragment
         android:id="@+id/nav_registro_vehiculo"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.registro_carros.carrosFragment"
-        android:label="carrosFragment" >
+        android:label="Vehiculos">
         <action
             android:id="@+id/action_nav_registro_vehiculo_to_registro_vehiculo"
             app:destination="@id/registro_vehiculo"
@@ -83,8 +85,8 @@
     <fragment
         android:id="@+id/monitoreoPreview"
         android:name="com.consorciosm.sanmiguel.ui.main.admin.ui.monitoreo.MonitoreoPreview"
-        android:label="fragment_monitoreo_preview"
-        tools:layout="@layout/fragment_monitoreo_preview" >
+        android:label="Rutas recorridas "
+        tools:layout="@layout/fragment_monitoreo_preview">
         <argument
             android:name="id"
             app:argType="string" />
