--- a/app/src/main/res/layout/fragment_notificaciones_detail.xml
+++ b/app/src/main/res/layout/fragment_notificaciones_detail.xml
@@ -210,17 +210,16 @@
                 android:textColor="#000"
                 android:textSize="12sp" />
 
-            <EditText
-                android:id="@+id/et_fecha_fps"
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/border_label"
                 android:gravity="center"
-                android:hint="27/05/2020"
-                android:inputType="date"
                 android:textColor="#000"
                 android:textSize="12sp" />
+
 
         </LinearLayout>
 
@@ -240,16 +239,16 @@
                 android:textColor="#000"
                 android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/et_nro_horas_fps"
+            <TextView
+                android:id="@+id/lbl_tiempo_promedio_fnd"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/border_label"
                 android:gravity="center"
-                android:hint="N° Horas..."
                 android:textColor="#000"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
+
 
         </LinearLayout>
 
@@ -269,23 +268,23 @@
         <TextView
             android:background="@drawable/border_label"
             android:textColor="#000"
-            android:id="@+id/lbl_autorizado_por_fnd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Autorizado Por:" />
 
-        <Spinner
-
-            android:id="@+id/spn_autorizado_por_fps"
+        <TextView
+            android:id="@+id/lbl_autorizado_por_fnd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:background="@drawable/border_label"
+            android:gravity="center"
+            android:textColor="#000" />
 
         <TextView
-            android:id="@+id/lbl_cargo_autorizado_por_fps"
+            android:id="@+id/lbl_cargo_autorizado_por_fnd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -315,15 +314,17 @@
             android:layout_weight="1"
             android:text="Autorizado A:" />
 
-        <Spinner
-            android:id="@+id/spn_autorizado_a_fps"
+        <TextView
+            android:id="@+id/lbl_autorizado_a_fnd"
+            android:background="@drawable/border_label"
+            android:textColor="#000"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center" />
+            android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/lbl_cargo_autorizado_a_fps"
+            android:id="@+id/lbl_cargo_autorizado_a_fnd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -352,16 +353,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Conductor Autorizado:" />
-
-        <Spinner
-            android:id="@+id/spn_conductor_fps"
+        <TextView
+            android:id="@+id/lbl_conductor_autorizado_fnd"
+            android:background="@drawable/border_label"
+            android:textColor="#000"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center" />
+            android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/lbl_placa_autorizado_por_fps"
+            android:id="@+id/lbl_placa_autorizado_por_fnd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -427,41 +429,37 @@
         app:layout_constraintTop_toBottomOf="@+id/ll_fechas_footer_fps">
 
 
-        <EditText
-            android:id="@+id/et_fecha_salida_fps"
+        <TextView
+            android:id="@+id/lbl_fecha_salida_fnd"
+            android:textColor="#000"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Fecha  y Hora de Salida..."
+            android:hint="FECHA DE SALIDA" />
+
+
+
+
+        <TextView
+            android:id="@+id/lbl_origen_salida_fnd"
             android:textColor="#000"
-            android:textSize="12sp" />
-
-
-
-
-        <EditText
-            android:id="@+id/et_origen_salida_fps"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Origen..."
-            android:textColor="#000"
-            android:textSize="12sp" />
+             />
 
-        <EditText
-            android:id="@+id/et_destino_salida_fps"
+        <TextView
+            android:id="@+id/lbl_destino_salidad_fnd"
+            android:textColor="#000"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Destino..."
-            android:textColor="#000"
-            android:textSize="12sp" />
+            android:layout_weight="1" />
     </LinearLayout>
 
 
@@ -476,40 +474,35 @@
         app:layout_constraintTop_toBottomOf="@+id/ll_fechas_salida_datos_fps">
 
 
-        <EditText
-            android:id="@+id/et_fecha_retorno_fps"
+        <TextView
+            android:id="@+id/lbl_fecha_retorno_fnd"
+            android:textColor="#000"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Fecha  y Hora de Retorno..."
+            android:hint="FECHA DE RETORNO" />
+
+
+
+        <TextView
+            android:id="@+id/lbl_origen_retorno_fnd"
             android:textColor="#000"
-            android:textSize="12sp" />
-
-
-
-        <EditText
-            android:id="@+id/et_origen_retorno_fps"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Origen..."
-            android:textColor="#000"
-            android:textSize="12sp" />
+            android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/et_destino_retorno_fps"
+        <TextView
+            android:id="@+id/lbl_destino_retorno_fnd"
+            android:textColor="#000"
+            android:textSize="10sp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/border_label"
-            android:gravity="center"
-            android:hint="Destino..."
-            android:textColor="#000"
-            android:textSize="12sp" />
+            android:layout_weight="1" />
     </LinearLayout>
 
     <TextView
@@ -524,9 +517,9 @@
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toBottomOf="@+id/ll_fechas_retorno_datos_fps" />
 
-    <EditText
+    <TextView
         android:layout_marginHorizontal="20dp"
-        android:id="@+id/et_ocupantes_vehiculo_fps"
+        android:id="@+id/lbl_ocupantes_vehiculo_fnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nombres de los ocupantes.."
@@ -543,28 +536,26 @@
         android:layout_height="wrap_content"
         android:text="OBSERVACIONES:"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toBottomOf="@+id/et_ocupantes_vehiculo_fps" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_ocupantes_vehiculo_fnd" />
 
-    <EditText
+    <TextView
 
         android:layout_marginHorizontal="20dp"
-        android:id="@+id/et_observaciones_fps"
+        android:id="@+id/lbl_observaciones_fnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
         android:layout_marginHorizontal="20dp"
-        android:id="@+id/btn_programar_salida_fps"
+        android:id="@+id/btn_validar_salida_fnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Programar"
+        android:text="VALIDAR"
         app:layout_constraintEnd_toStartOf="@+id/guideline15"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toBottomOf="@+id/et_observaciones_fps" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_observaciones_fnd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
