--- a/app/src/main/res/layout/fragment_partes.xml
+++ b/app/src/main/res/layout/fragment_partes.xml
@@ -22,7 +22,7 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/Salidas Pendientes de Validación"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Parte Diario:"
@@ -35,31 +35,31 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="Fecha:"
-        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_fop"
+        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_fn"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
+        app:layout_constraintTop_toBottomOf="@+id/Salidas Pendientes de Validación" />
 
     <EditText
-        android:id="@+id/et_fecha_fop"
+        android:id="@+id/et_fecha_fn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintStart_toEndOf="@+id/textView29"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
+        app:layout_constraintTop_toBottomOf="@+id/Salidas Pendientes de Validación" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_fragment_partes"
+        android:id="@+id/rv_fragment_notificaciones"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
+        app:layout_constraintTop_toBottomOf="@id/et_fecha_fn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 
     <RelativeLayout
         android:id="@+id/rl_frag_partes"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
+        app:layout_constraintTop_toBottomOf="@id/et_fecha_fn"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content">
