--- a/app/src/main/res/layout/fragment_notificaciones.xml
+++ b/app/src/main/res/layout/fragment_notificaciones.xml
@@ -35,12 +35,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="Fecha:"
-        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_fn"
+        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_fop"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toBottomOf="@+id/TextView541" />
 
     <EditText
-        android:id="@+id/et_fecha_fn"
+        android:id="@+id/et_fecha_fop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -50,16 +50,16 @@
         app:layout_constraintTop_toBottomOf="@+id/TextView541" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_fragment_notificaciones"
+        android:id="@+id/rv_fragment_ordenes_programadas"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fn"
+        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 
     <RelativeLayout
         android:id="@+id/rl_frag_partes"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fn"
+        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content">
